--- a/_posts/2025-12-09-blog.md
+++ b/_posts/2025-12-09-blog.md
@@ -18,6 +18,6 @@ Given these limitations, we set out to create a central repository where we cura
 - We found novel evidence for the involvement of specific cell types in disease, such as astrocytes being implicated in alcohol-related phenotypes.
 
 **How to use our results**
-- The processed single-cell RNAseq data from this study has been deposited to FUMA (<a>https://fuma.ctglab.nl/</a>) since version 1.8.2. 
+- The processed single-cell RNAseq data from this study has been deposited to FUMA (<https://fuma.ctglab.nl/>) since version 1.8.2. 
 - You can run the FUMA cell type pipeline on FUMA. However, the implemented workflow on FUMA cell type currently does not take into account the complex structure of the brain datasets. Instead, you can download the processed data available in the `Download` tab from FUMA, and implement the workflow as described here: https://github.com/tanyaphung/FUMA_Celltype_cmd
 - To help with the ease of selecting datasets for GWAS-to-cell-type, I also created an Rshiny app: https://tanyaphung.shinyapps.io/scrna_category_rshiny/
