--- a/_posts/2025-12-09-blog.md
+++ b/_posts/2025-12-09-blog.md
@@ -3,7 +3,7 @@ title: 'Preprint on cell types associated with brain-related traits'
 date: 2025-12-09
 ---
 
-My research on identifying cell types that are associated with brain-related traits is available as a preprint (link: https://www.biorxiv.org/content/10.64898/2025.12.05.692533v1)
+My research on identifying cell types that are associated with brain-related traits is available as a preprint (link: <https://www.biorxiv.org/content/10.64898/2025.12.05.692533v1>)
 
 **Background**
 My post-doc work is funded by the BRAINSCAPES consortium, which is a grant aimed at unraveling the biological mechanims underlying brain-related disorders. In complex traits, multiple genetic variants contribute to give rise to the phenotype but each one has very little effect size. It is therefore impossible to target any specific variant or gene. Instead, we hypothesize that perhaps the trait-associated genetic variants/genes might affect the same biological mechanism, pathway, tissue, or cell types. The underlying principal of my project is to leverage trait-associated genetic variants identified from genome-wide association studies (GWAS) and single-cell RNAseq to prioritize cell types that are most likely to be important to diseases. 
@@ -19,5 +19,5 @@ Given these limitations, we set out to create a central repository where we cura
 
 **How to use our results**
 - The processed single-cell RNAseq data from this study has been deposited to FUMA (<https://fuma.ctglab.nl/>) since version 1.8.2. 
-- You can run the FUMA cell type pipeline on FUMA. However, the implemented workflow on FUMA cell type currently does not take into account the complex structure of the brain datasets. Instead, you can download the processed data available in the `Download` tab from FUMA, and implement the workflow as described here: https://github.com/tanyaphung/FUMA_Celltype_cmd
-- To help with the ease of selecting datasets for GWAS-to-cell-type, I also created an Rshiny app: https://tanyaphung.shinyapps.io/scrna_category_rshiny/
+- You can run the FUMA cell type pipeline on FUMA. However, the implemented workflow on FUMA cell type currently does not take into account the complex structure of the brain datasets. Instead, you can download the processed data available in the `Download` tab from FUMA, and implement the workflow as described here: <https://github.com/tanyaphung/FUMA_Celltype_cmd>
+- To help with the ease of selecting datasets for GWAS-to-cell-type, I also created an Rshiny app: <https://tanyaphung.shinyapps.io/scrna_category_rshiny/>
